Bug 414600 - Scanner with multiple scan sources cannot be configured correctly
Summary: Scanner with multiple scan sources cannot be configured correctly
Status: RESOLVED FIXED
Alias: None
Product: libksane
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-28 12:15 UTC by Anton Arnold
Modified: 2019-12-11 20:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Arnold 2019-11-28 12:15:27 UTC
My scanner has 2(/3) scan sources: flatbed and an automatic document feeder (which is actually represented as 2 sources: ADF + duplex to distinguish single side/both side scan).
The flatbed source allows high resolutions up to 1200DPI and color. The ADF only 300DPI and grayscale.

This type of scanner is not handled correctly since the options are not available in a consistent manner, e.g. if I switch from ADF to flatbed I cannot select the full resolution.
Comment 1 Albert Astals Cid 2019-12-11 20:26:56 UTC
Git commit aada3bf426105405052f67890255bdd952d882ca by Albert Astals Cid, on behalf of Anton Arnold.
Committed on 11/12/2019 at 20:26.
Pushed by aacid into branch 'release/19.12'.

Optimize support of scanners with different image sources or duplex unit

Summary:

The initial changeset of D24904 has been split into two seperate revisions.
This one addresses various bugs which may result in inconsistent scanner options.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid, ngraham

Differential Revision: https://phabricator.kde.org/D25052

M  +35   -7    src/ksanewidget.cpp
M  +2    -1    src/ksanewidget_p.cpp
M  +0    -3    src/options/ksaneoptcombo.cpp

https://commits.kde.org/libksane/aada3bf426105405052f67890255bdd952d882ca
Comment 2 Albert Astals Cid 2019-12-11 20:27:25 UTC
Git commit ee889af437946da2aa6c4d00ca52bd739d328841 by Albert Astals Cid, on behalf of Anton Arnold.
Committed on 11/12/2019 at 20:27.
Pushed by aacid into branch 'master'.

Optimize support of scanners with different image sources or duplex unit

Summary:

The initial changeset of D24904 has been split into two seperate revisions.
This one addresses various bugs which may result in inconsistent scanner options.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid, ngraham

Differential Revision: https://phabricator.kde.org/D25052

M  +35   -7    src/ksanewidget.cpp
M  +2    -1    src/ksanewidget_p.cpp
M  +0    -3    src/options/ksaneoptcombo.cpp

https://commits.kde.org/libksane/ee889af437946da2aa6c4d00ca52bd739d328841