Optimize support of scanners with different image sources or duplex unit

Summary:
BUG: 414600

The initial changeset of D24904 has been split into two seperate revisions.
This one addresses various bugs which may result in inconsistent scanner options.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid, ngraham

Differential Revision: https://phabricator.kde.org/D25052